header and breadcrumbs links overlaping fixed

--- a/src/scss/components/_breadcrumb.scss
+++ b/src/scss/components/_breadcrumb.scss
@@ -2,7 +2,7 @@
   background: none;
   font-size: 0.9em;
   position: fixed;
-  top: 110px;
+  top: 115px;
   height: 30px;
   margin: 0;
 
@@ -23,8 +23,9 @@
     }
   }
 
-  .bold {
+  .last {
     font-weight: bold !important;
+    cursor: not-allowed;
   }
 
 }
